<?xml version="1.0" encoding="UTF-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent" 
			android:scrollbarAlwaysDrawHorizontalTrack="false" 
			android:scrollbarAlwaysDrawVerticalTrack="false" 
			android:scrollbars="vertical">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical">
	
	    <TextView 
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_marginLeft="20dip"
	        android:layout_marginRight="20dip"
	        android:text="@string/newPassword"
	        android:textSize="18sp"
	        android:gravity="left"/>
	
	    <EditText
	        android:id="@+id/newPasswordEntry"
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        android:layout_marginLeft="20dip"
	        android:layout_marginRight="20dip"
			android:singleLine="true"
	        android:scrollHorizontally="true"
	        android:autoText="false"
	        android:gravity="fill_horizontal"
	        android:password="true"/>
	        
	    <TextView 
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_marginLeft="20dip"
	        android:layout_marginRight="20dip"
	        android:textSize="18sp"
	        android:text="@string/newPasswordConfirm"
	        android:gravity="left"/>
	
	    <EditText
	        android:id="@+id/newPasswordConfirmEntry"
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        android:layout_marginLeft="20dip"
	        android:layout_marginRight="20dip"
			android:singleLine="true"
	        android:scrollHorizontally="true"
	        android:autoText="false"
	        android:gravity="fill_horizontal"
	        android:password="true"/>
		
	    <TextView 
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_marginLeft="20dip"
	        android:layout_marginRight="20dip"
	        android:text="@string/newPasswordRemove"
	        android:gravity="center"/>
	        
		<LinearLayout	orientation="horizontal"
				        android:gravity="right" 
				        android:layout_height="wrap_content"
				        android:layout_width="fill_parent"
				        android:layout_marginTop="10dip"
				        android:layout_marginLeft="20dip"
				        android:layout_marginRight="20dip">
			<Button android:id="@+id/okButton"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
                 	android:layout_weight="1"
                 	android:text="@string/ok"/>
					
			<Button android:id="@+id/cancelButton"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
                 	android:layout_weight="1"
					android:text="@string/cancel"/>
		</LinearLayout>
	</LinearLayout>
</ScrollView>