<?xml version="1.0" encoding="UTF-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent" 
			android:scrollbarAlwaysDrawHorizontalTrack="false" 
			android:scrollbarAlwaysDrawVerticalTrack="false" 
			android:scrollbars="vertical">
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
	    >
	
	    <TextView 
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_marginTop="10dip"
	        android:layout_marginLeft="20dip"
	        android:layout_marginRight="20dip"
	        android:text="@string/backupName"
	        android:textSize="18sp"
			android:textStyle="bold"
	        android:gravity="left"/>
	
	    <EditText
	        android:id="@+id/name"
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        android:layout_marginLeft="20dip"
	        android:layout_marginRight="20dip"
			android:singleLine="true"
	        android:scrollHorizontally="true"
	        android:autoText="false"
	        android:gravity="fill_horizontal"/>
	        
	    <TextView 
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_marginTop="10dip"
	        android:layout_marginLeft="20dip"
	        android:layout_marginRight="20dip"
	        android:text="@string/backupPassword"
	        android:textSize="18sp"
			android:textStyle="bold"
	        android:gravity="left"/>
	
	    <EditText
	        android:id="@+id/password"
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        android:layout_marginLeft="20dip"
	        android:layout_marginRight="20dip"
			android:singleLine="true"
	        android:scrollHorizontally="true"
	        android:autoText="false"
	        android:gravity="fill_horizontal"/>
	        
		<LinearLayout	orientation="horizontal"
				        android:gravity="right" 
				        android:layout_height="wrap_content"
				        android:layout_width="fill_parent"
				        android:layout_marginTop="10dip"
				        android:layout_marginLeft="20dip"
				        android:layout_marginRight="20dip">
			<Button android:id="@+id/okButton"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
                 	android:layout_weight="1"
                 	android:text="@string/backupOKButton"/>
					
			<Button android:id="@+id/cancelButton"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
                 	android:layout_weight="1"
					android:text="@string/cancel"/>
		</LinearLayout>
		
	    <TextView 
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        android:layout_marginTop="10dip"
	        android:layout_marginLeft="20dip"
	        android:layout_marginRight="20dip"
	        android:text="@string/backupStatusTitle"
	        android:textSize="18sp"
			android:textStyle="bold"
	        android:gravity="center"/>
	    <TextView 
	        android:id="@+id/status"
	        android:layout_height="fill_parent"
	        android:layout_width="wrap_content"
	        android:layout_marginTop="10dip"
	        android:layout_marginLeft="20dip"
	        android:layout_marginRight="20dip"
	        android:textSize="14sp"
			android:textStyle="bold"
	        android:gravity="left"/>
	</LinearLayout>
</ScrollView>