<?xml version="1.0" encoding="UTF-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent" 
			android:scrollbarAlwaysDrawHorizontalTrack="false" 
			android:scrollbarAlwaysDrawVerticalTrack="false" 
			android:scrollbars="vertical">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical">
	
	    <TextView 
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_marginLeft="20dip"
	        android:layout_marginRight="20dip"
	        android:text="@string/accountNameText"
	        android:textSize="18sp"
	        android:gravity="left"/>
	
	    <Button
	    	android:id="@+id/accountName"
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        android:layout_marginLeft="20dip"
	        android:layout_marginRight="20dip"/>
	        
	    <TextView 
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_marginLeft="20dip"
	        android:layout_marginRight="20dip"
	        android:textSize="18sp"
	        android:text="@string/accountCurrencyText"
	        android:gravity="left"/>
	
		<Button android:id="@+id/currency"
		        android:layout_marginLeft="20dip"
		        android:layout_marginRight="20dip"
		        android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
		        android:width="100sp"
				android:layout_gravity="right|center_vertical" android:gravity="center_vertical|center_horizontal"/>
	        
	        
	    <TextView 
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_marginLeft="20dip"
	        android:layout_marginRight="20dip"
	        android:textSize="18sp"
	        android:text="@string/accountOpeningBalanceText"
	        android:gravity="left"/>
	
		<LinearLayout	orientation="horizontal"
				        android:gravity="right" 
				        android:layout_height="wrap_content"
				        android:layout_width="fill_parent"
				        android:layout_marginLeft="20dip"
				        android:layout_marginRight="20dip">
		    <TextView 
		    	android:id="@+id/currencySymbol"
		        android:layout_height="fill_parent"
		        android:layout_width="wrap_content"
		        android:layout_marginTop="10dip"
		        android:layout_marginLeft="20dip"
		        android:layout_marginRight="20dip"
		        android:textSize="18sp"
				android:textStyle="bold"
		        android:layout_gravity="center_vertical"/>
		        
		    <Button
		    	android:id="@+id/amount"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"/>
		</LinearLayout>
		
			<LinearLayout	orientation="horizontal"
					        android:gravity="right" 
					        android:layout_height="wrap_content"
					        android:layout_width="fill_parent"
					        android:layout_marginTop="10dip"
					        android:layout_marginLeft="20dip"
					        android:layout_marginRight="20dip">
				<Button android:id="@+id/okButton"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
	                 	android:layout_weight="1"
	                 	android:text="@string/okButtonText"/>
						
				<Button android:id="@+id/cancelButton"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
	                 	android:layout_weight="1"
						android:text="@string/cancelButtonText"/>
			</LinearLayout>
	</LinearLayout>
</ScrollView>