<?xml version="1.0" encoding="UTF-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent" 
			android:scrollbarAlwaysDrawHorizontalTrack="false" 
			android:scrollbarAlwaysDrawVerticalTrack="false" 
			android:scrollbars="vertical">
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
	    >
	
	    <TextView 
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_marginTop="10dip"
	        android:layout_marginLeft="20dip"
	        android:layout_marginRight="20dip"
	        android:text="@string/entryDateText"
	        android:textSize="18sp"
			android:textStyle="bold"
	        android:gravity="left"/>
	        
		<Button android:id="@+id/newEntryDateButton"
		        android:layout_marginLeft="20dip"
		        android:layout_marginRight="20dip"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"/>
				
	    <TextView 
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_marginTop="10dip"
	        android:layout_marginLeft="20dip"
	        android:layout_marginRight="20dip"
	        android:text="@string/entryTypeText"
	        android:textSize="18sp"
			android:textStyle="bold"
	        android:gravity="left"/>
	
		
	    <RadioGroup android:id="@+id/type"
		        	android:layout_marginLeft="20dip"
	    		    android:layout_marginRight="20dip"
	    			android:layout_width="wrap_content"
	    			android:layout_height="wrap_content"
	    			android:addStatesFromChildren="true"
	    			android:checkedButton="@+id/debitButton"
	    			android:orientation="horizontal">
	    	<RadioButton	android:id="@+id/creditButton" 
	    					android:layout_width="wrap_content"
	    					android:layout_height="wrap_content"
					        android:textSize="18sp"
	    					android:text="Credit"/>
			<RadioButton	android:id="@+id/debitButton"
					        android:textSize="18sp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginLeft="10dip"
							android:text="Debit"/>
		</RadioGroup>
	
	    <TextView 
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_marginTop="10dip"
	        android:layout_marginLeft="20dip"
	        android:layout_marginRight="20dip"
	        android:text="@string/entryPayeeText"
	        android:textSize="18sp"
			android:textStyle="bold"
	        android:gravity="left"/>
	
	    <Button
	    	android:id="@+id/payee"
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        android:layout_marginLeft="20dip"
	        android:layout_marginRight="20dip"/>
	        
	    <TextView 
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:layout_marginTop="10dip"
	        android:layout_marginLeft="20dip"
	        android:layout_marginRight="20dip"
	        android:text="@string/entryAmountText"
	        android:textSize="18sp"
			android:textStyle="bold"
	        android:gravity="left" 
	        />
	
		<LinearLayout	orientation="horizontal"
				        android:gravity="right" 
				        android:layout_height="wrap_content"
				        android:layout_width="fill_parent"
				        android:layout_marginLeft="20dip"
				        android:layout_marginRight="20dip">
		    <TextView 
		    	android:id="@+id/currencySymbol"
		        android:layout_height="fill_parent"
		        android:layout_width="wrap_content"
		        android:layout_marginTop="10dip"
		        android:layout_marginLeft="20dip"
		        android:layout_marginRight="20dip"
		        android:textSize="18sp"
				android:textStyle="bold"
		        android:layout_gravity="center_vertical"/>
		        
		    <Button
		    	android:id="@+id/amount"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"/>
		</LinearLayout>
			
		<LinearLayout	orientation="horizontal"
				        android:gravity="right" 
				        android:layout_height="wrap_content"
				        android:layout_width="fill_parent"
				        android:layout_marginTop="10dip"
				        android:layout_marginLeft="20dip"
				        android:layout_marginRight="20dip">
			<Button android:id="@+id/okButton"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
                 	android:layout_weight="1"
                 	android:text="@string/okButtonText"/>
					
			<Button android:id="@+id/cancelButton"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
                 	android:layout_weight="1"
					android:text="@string/cancelButtonText"/>
		</LinearLayout>
	</LinearLayout>
</ScrollView>